--- a/App/package.json
+++ b/App/package.json
@@ -36,11 +36,16 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "i18n-js": "^4.4.3",
+    "i18next": "^23.11.2",
+    "i18next-react-native-language-detector": "^1.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.314.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.1.1",
+    "react-intl": "^6.6.5",
     "react-native": "0.73.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.16.0",
